--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
@@ -5,10 +5,10 @@
     <ScrollView x:Name="scrollView" HeightRequest="650">
         <StackLayout Margin="0,20,0,0" Padding="10" >
             <VerticalStackLayout Spacing="10">
-                <Button x:Name="ButtonAskForChange" Text="This canyon need an Update !" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
+                <Button x:Name="ButtonAskForChange" Clicked="ButtonAskForChangeClicked" Text="This canyon need an Update !" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                 <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,*,*,*,*,*,*,*" HorizontalOptions="CenterAndExpand" >
                     <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand"   FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" />
-                    <Button Grid.Column="1" Grid.Row="0" Text="Modify" IsVisible="false" HorizontalOptions="CenterAndExpand" BackgroundColor="#00B4D8" CornerRadius="5" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
+                    <Button x:Name="modifyCanyonBtn"  Grid.Column="1" Grid.Row="0" Text="Modify" IsVisible="false" HorizontalOptions="CenterAndExpand" BackgroundColor="#00B4D8" CornerRadius="5" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                     <Label Margin="0,20,0,0" Grid.Column="0" Grid.Row="1" Text="Country" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                     <Label Margin="0,20,0,0" Grid.Column="1" Grid.Row="1" x:Name="countryCanyon" TextColor="#00B4D8" VerticalOptions="Center" HorizontalOptions="Start" FontSize="14"/>
 
