--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
@@ -4,10 +4,9 @@
              x:Class="MAUIMobileStarterKit.Screens.CanyoningPageScreens.TopoCanyonScreen">
     <ScrollView x:Name="scrollView">
         <StackLayout Orientation="Vertical" Padding="10">
-
             <Label x:Name="EmptyTopography" HorizontalTextAlignment="Center" Text="There is no topopography profile for this canyon, please add precise informations, they will be validated by administrator." FontFamily="CabinBold"  TextColor="#03045E" FontSize="15" TextDecorations="Underline"/>
             <StackLayout VerticalOptions="Center"  Orientation="Horizontal">
-                <ListView x:Name="TopoListView" RowHeight="350"  SeparatorVisibility="None" ItemsSource="{Binding TopographiesList}" HasUnevenRows="false" >
+                <ListView x:Name="TopoListView" SelectionMode="None" ItemTapped="TopoListViewItemTapped" RowHeight="350"  SeparatorVisibility="None" ItemsSource="{Binding TopographiesList}" HasUnevenRows="false" >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -61,7 +60,7 @@
 
             <VerticalStackLayout HorizontalOptions="FillAndExpand" Spacing="10" Margin="0,10,0,0">
                 <Button Text="Add Obstacle" Clicked="AddObestacleClicked" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15"/>
-                <!--<Button Text="Save" Clicked="SaveObstacleClicked" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15"/>-->
+                <Button Text="Save" x:Name="saveButton" Clicked="SaveObstacleClicked" FontFamily="CabinBold" BackgroundColor="#00B4D8"  IsVisible="False"  CornerRadius="20" TextColor="White" FontSize="15"/>
             </VerticalStackLayout>
         </StackLayout>
     </ScrollView>
