--- a/MAUIMobileStarterKit/Screens/AddNewItem/AddTopoCanyon.xaml
+++ b/MAUIMobileStarterKit/Screens/AddNewItem/AddTopoCanyon.xaml
@@ -30,7 +30,10 @@
                 <Editor Placeholder="Your Comment*:" x:Name="Commentoftheuser" TextColor="#03045E" FontSize="15"  PlaceholderColor="Gray" />
             </Frame>
 
-        <Button Text="Add Topo" Clicked="AddTopoBtnClicked" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15"/>
+        <Button Text="Add Topo" x:Name="savetopo" Clicked="AddTopoBtnClicked" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15"/>
+
+        <Button Text="Modify" x:Name="modify" IsVisible="false" Clicked="ModifyClicked" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15"/>
+        <Button Text="Delete" x:Name="delete" IsVisible="false" Clicked="DeleteClicked" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15"/>
 
     </StackLayout>
 </toolkit:Popup>
