--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
@@ -7,7 +7,7 @@
             <VerticalStackLayout Spacing="10">
                 <Button x:Name="ButtonAskForChange" Clicked="ButtonAskForChangeClicked" Text="This canyon need an Update !" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                 <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,*,*,*,*,*,*,*" HorizontalOptions="CenterAndExpand" >
-                    <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand"   FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" />
+                    <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand"   FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" x:Name="nameofCanyon" />
                     <Button x:Name="modifyCanyonBtn" IsVisible="false" Clicked="modifyCanyonBtnClicked"  Grid.Column="1" Grid.Row="0" Text="Modify" HorizontalOptions="CenterAndExpand" BackgroundColor="#00B4D8" CornerRadius="5" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                     <Label Margin="0,20,0,0" Grid.Column="0" Grid.Row="1" Text="Country" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                     <Label Margin="0,20,0,0" Grid.Column="1" Grid.Row="1" x:Name="countryCanyon" TextColor="#00B4D8" VerticalOptions="Center" HorizontalOptions="Start" FontSize="14"/>
