--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
@@ -13,14 +13,14 @@
                                 <StackLayout  Margin="0,5" >
                                     <Frame Padding="0,0,5,0" BorderColor="Transparent" CornerRadius="5"  HasShadow="False" BackgroundColor="#90E0EF" >
                                         <Grid RowDefinitions="Auto" ColumnDefinitions="Auto,*" ColumnSpacing="10" >
-                                            <Image WidthRequest="180" BackgroundColor="LightGrey" Aspect="AspectFill" Grid.Row="0" Grid.Column="0">
+                                            <Image HeightRequest="30" WidthRequest="30" BackgroundColor="LightGrey" Aspect="AspectFill" Grid.Row="0" Grid.Column="0">
                                                 <Image.Source>
                                                     <FileImageSource File="{Binding ImageObstacle}"/>
                                                 </Image.Source>
                                             </Image>
                                             <VerticalStackLayout  Grid.Row="0" Grid.Column="1" Padding="0,5">
                                                 <VerticalStackLayout>
-                                                    <Image HeightRequest="100" BackgroundColor="LightGrey" Aspect="AspectFill"  >
+                                                    <Image HeightRequest="30" WidthRequest="30" BackgroundColor="LightGrey" Aspect="AspectFill"  >
                                                         <Image.Source>
                                                             <FileImageSource File="{Binding ImageDanger}"/>
                                                         </Image.Source>
